objects/agf__ADM_Feature_Freeze_Status__c.object
<CustomObject>
    <fields>
        <fullName>agf__Number_of_P2_Bugs__c</fullName>
        <description>Number of P2 Bugs and Test Failures to Fix or Verify.</description>
        <inlineHelpText>Number of P2 bugs and test failures to fix or verify.  FF criterion is no more than 10.</inlineHelpText>
        <label>Num P2 Bugs/TF to Fix/Verify (&lt;=10)</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>agf__Number_of_TF_to_Fix_1week_0__c</fullName>
        <description>Total Number of TF to Fix &gt;1 week old (0)</description>
        <inlineHelpText>Total Number of TF to Fix &gt;1 week old (0)</inlineHelpText>
        <label>Number of TF to Fix &gt;1week (0)</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>agf__Number_of_TF_to_Fix_max_1_Dev__c</fullName>
        <label>Number of TF to Fix (max 1/Dev)</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>agf__Number_of_TF_to_Fix_or_Verify_1week_0__c</fullName>
        <description>Total Number of TF to Fix or Verify &gt;1 week old (0)</description>
        <inlineHelpText>Total Number of TF to Fix or Verify &gt;1 week old (0)</inlineHelpText>
        <label>Number of TF to Fix or Verify &gt;1week (0)</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>agf__Number_of_Test_Failures__c</fullName>
        <description>Number of open Ftest failures.</description>
        <inlineHelpText>Number of open Ftest failures.</inlineHelpText>
        <label>Number of Ftest Failures</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>agf__Open_Accessibility_Bugs__c</fullName>
        <inlineHelpText>Does your team have any open Accessibility bugs?</inlineHelpText>
        <label>Open Accessibility Bugs</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>No Applicable UI</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>agf__Other_Changes_for_RelEng__c</fullName>
        <description>Anything of interest that Release Engineering should be aware of?</description>
        <inlineHelpText>Anything of interest that Release Engineering should be aware of?</inlineHelpText>
        <label>Other Changes for RelEng</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>agf__Other_Changes_for_Tech_Ops__c</fullName>
        <description>Anything of interest that Tech Ops should be aware of?</description>
        <inlineHelpText>Anything of interest that Tech Ops should be aware of?</inlineHelpText>
        <label>Other Changes for Tech Ops</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>agf__P012_Security_Bugs_Closed__c</fullName>
        <inlineHelpText>P012 Security Bugs are closed or approved by ProdSec in the release that is open at the time of their discovery.</inlineHelpText>
        <label>P012 Security Bugs Closed</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>agf__P0_1_2_Bugs_from_RCA_1_Month_Closed__c</fullName>
        <inlineHelpText>All P,0,1,2 Bugs from RCAs older than 1 month are closed, *including* previous or current releases</inlineHelpText>
        <label>P012 Bugs from RCA&apos;s &gt; 1 Month: Closed</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>agf__P0_P1_P2_Bugs_Found_the_Week_of_FF__c</fullName>
        <description>P0/P1/P2 Bugs Found the Week of Feature Freeze (explain if count is not trending downward compared to previous 2-3 weeks)</description>
        <inlineHelpText>P0/P1/P2 Bugs Found the Week of Feature Freeze (explain if count is not trending downward compared to previous 2-3 weeks)</inlineHelpText>
        <label>P0/P1/P2 Bugs Found the Week of FF</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>agf__P0_P1_P2_Bugs_TF_Found_the_Week_of_FF__c</fullName>
        <description>P0/P1/P2 Bugs/TF Found the Week of Feature Freeze (explain if count is not trending downward compared to previous 2-3 weeks)</description>
        <inlineHelpText>P0/P1/P2 Bugs/TF Found the Week of Feature Freeze (explain if count is not trending downward compared to previous 2-3 weeks)</inlineHelpText>
        <label>P0/P1/P2 Bugs/TF Found the Week of FF</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>agf__Pending_Auto_Integrations_0__c</fullName>
        <description>Total Number of Pending Auto-Integrations (0)</description>
        <inlineHelpText>Total Number of Pending Auto-Integrations from 164 -&gt; /main.  Feature Freeze Requirement is 0.</inlineHelpText>
        <label>Total # of Pending Auto-Integrations (0)</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>agf__Perf_Impact_Features_Tested_Behind_Perm__c</fullName>
        <description>High Risk Performance Impacting features tested / behind perm</description>
        <inlineHelpText>Performance risk assessment completed for all features.   All high risk performance impacting features have been adequately tested and/or disabled by default (e.g. behind perm, or config)</inlineHelpText>
        <label>High Risk Performance:Tested/Behind Perm</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>agf__Performance_Engineering_Requirements_Met__c</fullName>
        <description>The Performance Engineering requirements have been met.</description>
        <inlineHelpText>The Performance Engineering requirements have been met.</inlineHelpText>
        <label>Performance Engineering Requirements Met</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>True</fullName>
                </value>
                <value>
                    <fullName>False</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>agf__Performance_Self_Assessment__c</fullName>
        <description>Are remaining features which have not yet completed performance testing, ready to be handed over to Performance Engineering Team?”</description>
        <inlineHelpText>What does it mean to be ready?

Test plans are finalized &amp; reviewed.

Features with known performance risk are disabled by default (behind perm, config switch)</inlineHelpText>
        <label>Performance Self Assessment</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>agf__Post_Feature_Freeze_Updates__c</fullName>
        <inlineHelpText>Use this for updates on status after Feature Freeze.</inlineHelpText>
        <label>Post Feature Freeze Updates</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>agf__Provide_Details_for_Core_Hybrid_in_Dev__c</fullName>
        <description>Used for details around if a team has not completed their testing of the Core Release against the Hybrid Applications that are in development and slated for the S1 Major Release.  Only needed if &quot;No&quot; is selected.</description>
        <inlineHelpText>Provide details if &quot;No&quot; is selected for the &quot;Core Release against Hybrid Apps in Dev&quot; field.</inlineHelpText>
        <label>Provide Details for Core/In-dev Hybrid</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>agf__Provide_Details_for_Scale_Impact__c</fullName>
        <inlineHelpText>Provide details if Scale Impact is not documented.</inlineHelpText>
        <label>Provide Details for Scale Impact</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>agf__Provide_Details_for_one_app_Testing__c</fullName>
        <description>Used for details around if a team has not completed their testing of the supported one.app browsers.  Only needed if &quot;No&quot; is selected.</description>
        <inlineHelpText>Provide details if &quot;No&quot; is selected for the &quot;All supported one.app browsers tested&quot; field.</inlineHelpText>
        <label>Provide Details for one.app Testing</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>agf__Provide_behind_perm_details__c</fullName>
        <inlineHelpText>Provide details explaining how a perm is used to disable incomplete features.</inlineHelpText>
        <label>Provide details on your features perm</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>agf__Provide_details_for_Core_Prod_Hybrid__c</fullName>
        <description>Used for details around if a team has not completed their testing of the Core Release against the Production Hybrid Applications.  Only needed if &quot;No&quot; is selected.</description>
        <inlineHelpText>Provide details if &quot;No&quot; is selected for the &quot;Core Release against Prod Hybrid Apps&quot; field.</inlineHelpText>
        <label>Provide Details for Core/Prod Hybrid</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>agf__Provide_details_if_SO_not_created__c</fullName>
        <inlineHelpText>FF Criteria: Feature Enablement must be detailed in Solutions Overview (SO)</inlineHelpText>
        <label>Provide details if SO not created</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>agf__Provide_details_on_open_P012_Bugs__c</fullName>
        <inlineHelpText>FF Criteria: All P012 bugs CLOSED</inlineHelpText>
        <label>Provide details on open P012 Bugs</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>agf__Provide_details_on_open_RCA_Stories__c</fullName>
        <inlineHelpText>FF Criteria: All User Stories from RCAs older than 1 month CLOSED or SCHEDULED</inlineHelpText>
        <label>Provide details on open RCA Stories</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>agf__Provide_details_on_open_RCA_ToDos__c</fullName>
        <inlineHelpText>FF Criteria: All ToDos (any priority) from RCAs older than 1 month CLOSED, including previous or current release</inlineHelpText>
        <label>Provide details on open RCA ToDos</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>agf__Provide_details_on_open_RCA_bugs__c</fullName>
        <inlineHelpText>FF Criteria: All P012 bugs from RCAs older than 1 month CLOSED, including previous or current release</inlineHelpText>
        <label>Provide details on open RCA bugs</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>agf__Provide_details_on_open_Regressions__c</fullName>
        <inlineHelpText>FF Criteria: All Regressions CLOSED</inlineHelpText>
        <label>Provide details on open Regressions</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>agf__Provide_details_on_open_Security_bugs__c</fullName>
        <inlineHelpText>FF Criteria: All P01 Security bugs and P2 Security bugs that are &gt; 120 days old CLOSED</inlineHelpText>
        <label>Provide details on open Security bugs</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>agf__Provide_open_Accessibility_bug_details__c</fullName>
        <inlineHelpText>FF Criteria: All bugs &gt; 45 days closed; RF Criteria: All bugs closed</inlineHelpText>
        <label>Provide open Accessibility bug details</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>agf__Provide_other_team_dependencies_details__c</fullName>
        <inlineHelpText>Provide details on the status of dependencies on other teams.</inlineHelpText>
        <label>Provide details on open dependencies</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>agf__QE_Leadership_Confirmation_Details__c</fullName>
        <label>QE Leadership Confirmation Details</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>agf__QE_Leadership_Sign_Off_Confirmed__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Used by QE Leader responsible for confirming team signoff.</inlineHelpText>
        <label>QE Leadership Sign Off Confirmed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>agf__QE_Signoff_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>QE Signoff By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Feature_Freeze_Team_Status</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>agf__RCA_Dashboard_link__c</fullName>
        <formula>HYPERLINK(&apos;https://gus.my.salesforce.com/00OB0000000OPSd&apos;,&apos;RCA Dashboard Link&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>RCA Dashboard link</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>agf__RCA_Stories_1_Month_Closed_Scheduled__c</fullName>
        <inlineHelpText>All User-stories from RCAs older than 1 month, must be closed or scheduled for a release or sprint</inlineHelpText>
        <label>RCA Stories &gt;1 Month Closed or Scheduled</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>agf__RCA_To_Do_s_1_Month_Closed__c</fullName>
        <inlineHelpText>All ToDos (*ALL Priorities**) from RCAs older than 1 month, *including* previous or current releases are closed.</inlineHelpText>
        <label>To Do&apos;s from RCA&apos;s &gt; 1 Month: Closed</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>agf__Scale_Impact_CMP__c</fullName>
        <formula>HYPERLINK(&apos;https://gus.my.salesforce.com/a10B00000004DAK&apos;,&apos;Build for Scale CMP Link&apos;)</formula>
        <inlineHelpText>Link to Collaborative Meta-process record for  Build to Scale.</inlineHelpText>
        <label>Scale Impact CMP</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>agf__Scale_Impact_Documented__c</fullName>
        <inlineHelpText>Has the Team reviewed and documented scale limitations for all new/updated features?</inlineHelpText>
        <label>Scale Impact Documented?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>agf__Scrum_Team__c</fullName>
        <formula>agf__Team_Release__r.agf__Scrum_Team__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Scrum Team</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>agf__Security_Dashboard_link__c</fullName>
        <formula>HYPERLINK(&apos; https://gus.my.salesforce.com/00OB0000000PvDR?dbw=1  &apos;,&apos;Security Dashboard Link&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Security Dashboard link</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>agf__Signoff_Date__c</fullName>
        <formula>IF(
 OR( ISPICKVAL(agf__Team_Signoff_Status__c, &quot;Yes / meets criteria&quot;), ISPICKVAL(agf__Team_Signoff_Status__c, &quot;Yes / does not meet criteria&quot;)), 
 LastModifiedDate , null
  )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Signoff Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>agf__Solution_Overview_Complete__c</fullName>
        <description>Enablement slide in the Solution Overview is complete and delivered to Product Ops and Feature Enablement field is updated in Solution Overview in Scrumforce.</description>
        <inlineHelpText>Enablement slide in the Solution Overview is complete and delivered to Product Ops and Feature Enablement field is updated in Solution Overview in Scrumforce.</inlineHelpText>
        <label>Solution Overview Complete</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>False</fullName>
                    <default>true</default>
                    <label>False</label>
                </value>
                <value>
                    <fullName>True</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>agf__Solutions_Overview_Complete__c</fullName>
        <inlineHelpText>Feature Enablement details are documented in the Solution Overview object</inlineHelpText>
        <label>Solution Overview Created</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>agf__Stop_Monitoring_Disabled_Services__c</fullName>
        <description>Any existing services being disabled and need monitoring turned off?</description>
        <inlineHelpText>Any existing services being disabled and need monitoring turned off?</inlineHelpText>
        <label>Stop Monitoring Disabled Services</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>agf__Swimlane_Solutions_Built_Utilized__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>All 4 swimlanes for the solution are built and utilized (dev, test, stage, prod).  

Dev/Test must be part of Sprint.  Stage must be used for UAT.</inlineHelpText>
        <label>Swimlane Solutions Built &amp; Utilized</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>agf__TF_Fixed_the_Week_of_Feature_Freeze__c</fullName>
        <label>TF Fixed the Week of Feature Freeze</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>agf__TF_Found_the_Week_of_Feature_Freeze__c</fullName>
        <description># of TF Found the Week of Feature Freeze (explain if count is not trending downward compared to previous 2-3 weeks)</description>
        <inlineHelpText># of TF Found the Week of Feature Freeze (explain if count is not trending downward compared to previous 2-3 weeks)</inlineHelpText>
        <label>TF Found the Week of Feature Freeze</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>agf__Team_Comments__c</fullName>
        <label>Team Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>agf__Team_Release__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Team Release</label>
        <referenceTo>agf__ADM_Team_Release__c</referenceTo>
        <relationshipName>R00NT0000000txY2MAI</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>agf__Team_Signoff_Confirmed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Team Signoff Confirmed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>agf__Team_Signoff_Status_Details__c</fullName>
        <label>Team Signoff Status Details</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>agf__Team_Signoff_Status__c</fullName>
        <label>Team Signoff Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes / meets criteria</fullName>
                </value>
                <value>
                    <fullName>Yes / does not meet criteria</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>agf__Team_Signoff__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Team signs off by checking the box.</description>
        <inlineHelpText>Team signs off by checking the box.</inlineHelpText>
        <label>Team Signoff</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>agf__Team_Signs_Off__c</fullName>
        <description>The date the Scrum Team signed off on Feature Freeze.</description>
        <inlineHelpText>The date the Scrum Team signed off on Feature Freeze.</inlineHelpText>
        <label>Team Signed Off</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>agf__Teams_Self_Assessment__c</fullName>
        <description>Teams will be asked to assess their risk of meeting FF, 2 weeks out from the FF milestone date</description>
        <inlineHelpText>If your team is at risk of not meeting any of the Feature Freeze Criteria listed on this record, you should mark your status as Red or Yellow and explain reasons why.</inlineHelpText>
        <label>Assess Teams Risk of meeting FF</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Green</fullName>
                </value>
                <value>
                    <fullName>Yellow</fullName>
                </value>
                <value>
                    <fullName>Red</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>agf__Upgrade_Scripts_Verified_in_Upgrade_Env__c</fullName>
        <description>Upgrade scripts have been verified in GUS upgrade environment.</description>
        <inlineHelpText>Upgrade scripts have been verified in GUS upgrade environment.</inlineHelpText>
        <label>Upgrade Scripts Verified in Upgrade Env</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>True</fullName>
                </value>
                <value>
                    <fullName>False</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>agf__Upgrade__c</fullName>
        <description>Database scripts are complete and incorporated into database upgrade process.</description>
        <inlineHelpText>Database scripts are complete and incorporated into database upgrade process.</inlineHelpText>
        <label>DB Upgrade Scripts Complete</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>False</fullName>
                    <default>true</default>
                    <label>False</label>
                </value>
                <value>
                    <fullName>True</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>agf__X0_TF_on_basicftest_basicselem_test__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Zero TF on the basicftest, basicselenium and utest at time of FF</description>
        <inlineHelpText>New Criteria for 172: 

Zero TF on these test suites at time of FF.</inlineHelpText>
        <label>Zero TF:basicftest, basicselenium, utest</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>agf__Zero_Downtime_Sign_Off__c</fullName>
        <description>Sign Off for Zero Downtime</description>
        <inlineHelpText>Sign Off confirms:
1. All work for Pre, Post, Retired scripts is done
2. Features to be enabled with Retired Scripts have been identified
3. Confirm sub-systems schedule in Zero Downtime runlist
4. Action items assigned by Zero Downtime Team are done</inlineHelpText>
        <label>Team Sign Off for Zero Downtime</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>agf__of_Fixed_Bugs_to_Verify_Zero__c</fullName>
        <label>Number of Fixed Bugs to Verify (0)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>agf__of_Open_P0_P1_P2_Bugs_ZERO__c</fullName>
        <label>Number of Open P0, P1 , P2 Bugs (0)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Freeze Team Status</label>
    <nameField>
        <displayFormat>FS-{0000000}</displayFormat>
        <label>Freeze Status Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Freeze Team Status</pluralLabel>
    <recordTypes>
        <fullName>agf__Early_Assessment_Record</fullName>
        <active>true</active>
        <description>Assessment of Team&apos;s Status before Feature Freeze assessment</description>
        <label>Early Assessment Record</label>
    </recordTypes>
    <recordTypes>
        <fullName>agf__FF_Sign_Off_Record</fullName>
        <active>true</active>
        <description>Feature Freeze team Sign off record</description>
        <label>FF Sign Off Record</label>
    </recordTypes>
    <recordTypes>
        <fullName>agf__RF_Sign_Off_Record</fullName>
        <active>true</active>
        <description>Release Freeze team Sign off record</description>
        <label>RF Sign Off Record</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>agf__Accessibility_details_required_bugs_open</fullName>
        <active>true</active>
        <description>When open Accessibility bugs are reported, details must be provided.</description>
        <errorConditionFormula>AND(ISPICKVAL(agf__Accessibility_Bugs_Closed__c, &quot;No&quot;), ISBLANK( agf__Provide_open_Accessibility_bug_details__c))</errorConditionFormula>
        <errorDisplayField>agf__Provide_open_Accessibility_bug_details__c</errorDisplayField>
        <errorMessage>You must provide details when reporting open Accessibility bugs.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>agf__Details_must_be_provided_open_RCA_bugs</fullName>
        <active>true</active>
        <errorConditionFormula>AND(ISPICKVAL(agf__P0_1_2_Bugs_from_RCA_1_Month_Closed__c, &quot;No&quot;), ISBLANK(agf__Provide_details_on_open_RCA_bugs__c))</errorConditionFormula>
        <errorDisplayField>agf__Provide_details_on_open_RCA_bugs__c</errorDisplayField>
        <errorMessage>Details must be provided when reporting open RCA bugs that are older than one month.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>agf__Details_must_be_provided_open_RCAstories</fullName>
        <active>true</active>
        <errorConditionFormula>AND(ISPICKVAL(agf__RCA_Stories_1_Month_Closed_Scheduled__c, &quot;No&quot;), ISBLANK(agf__Provide_details_on_open_RCA_Stories__c))</errorConditionFormula>
        <errorDisplayField>agf__Provide_details_on_open_RCA_Stories__c</errorDisplayField>
        <errorMessage>Details must be provided when reporting RCA stories that are older than one month that are not Closed or Scheduled.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>agf__Details_must_be_provided_open_RCAtodos</fullName>
        <active>true</active>
        <errorConditionFormula>AND(ISPICKVAL(agf__RCA_To_Do_s_1_Month_Closed__c, &quot;No&quot;), ISBLANK(agf__Provide_details_on_open_RCA_ToDos__c))</errorConditionFormula>
        <errorDisplayField>agf__Provide_details_on_open_RCA_ToDos__c</errorDisplayField>
        <errorMessage>Details must be provided when reporting open RCA To Do that are older than one month.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>agf__Details_must_be_provided_open_Secur_bugs</fullName>
        <active>true</active>
        <errorConditionFormula>AND(ISPICKVAL(agf__P012_Security_Bugs_Closed__c, &quot;No&quot;), ISBLANK(agf__Provide_details_on_open_Security_bugs__c))</errorConditionFormula>
        <errorDisplayField>agf__Provide_details_on_open_Security_bugs__c</errorDisplayField>
        <errorMessage>Details must be provided when reporting open P0, P1 or P2 Security bugs.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>agf__Must_Explain_If_Not_Meeting_Criteria</fullName>
        <active>true</active>
        <errorConditionFormula>IF(ISBLANK( agf__Team_Signoff_Status_Details__c),
   OR( ISPICKVAL( agf__Team_Signoff_Status__c, &quot;Yes / does not meet criteria&quot;),
        ISPICKVAL( agf__Team_Signoff_Status__c, &quot;No&quot;)),
    false)</errorConditionFormula>
        <errorDisplayField>agf__Team_Signoff_Status_Details__c</errorDisplayField>
        <errorMessage>You must provide details if signing off without meeting criteria or when setting Signoff Status to &quot;No&quot;.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>agf__Must_Explain_if_Yellow_or_Red</fullName>
        <active>true</active>
        <errorConditionFormula>IF ( ISBLANK( agf__Assessment_Details__c ), 
        IF(ISPICKVAL(agf__Teams_Self_Assessment__c,  &apos;Red&apos;),true,
          IF(ISPICKVAL( agf__Teams_Self_Assessment__c, &apos;Yellow&apos;),true,
      false)),false)</errorConditionFormula>
        <errorDisplayField>agf__Assessment_Details__c</errorDisplayField>
        <errorMessage>You must provide details if Team status is Yellow or Red.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>agf__One_2Week_Response_Only</fullName>
        <active>true</active>
        <errorConditionFormula>(agf__EA_2Week_Risk_Response__c &amp;&amp; agf__EA_2Week_NotReady_Response__c) || (agf__EA_2Week_Ready_Response__c &amp;&amp; agf__EA_2Week_Risk_Response__c) || (agf__EA_2Week_Ready_Response__c &amp;&amp; agf__EA_2Week_NotReady_Response__c)</errorConditionFormula>
        <errorMessage>Choose only one of the responses in the 2 Week Overall Assessment section.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>agf__One_6Week_Response_Only</fullName>
        <active>true</active>
        <errorConditionFormula>(agf__EA_6Week_Risk_Response__c &amp;&amp; agf__EA_6Week_NotReady_Response__c) || (agf__EA_6Week_Ready_Response__c &amp;&amp; agf__EA_6Week_Risk_Response__c) || (agf__EA_6Week_Ready_Response__c &amp;&amp; agf__EA_6Week_NotReady_Response__c)</errorConditionFormula>
        <errorMessage>Choose only one of the responses in the 6-8 Week Overall Assessment section.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>agf__One_6Week_Response_Required</fullName>
        <active>false</active>
        <errorConditionFormula>NOT(agf__EA_6Week_Risk_Response__c) &amp;&amp; NOT(agf__EA_6Week_NotReady_Response__c) &amp;&amp; NOT(agf__EA_6Week_Ready_Response__c)</errorConditionFormula>
        <errorMessage>Choose one of the responses in the 6-8 Week Overall Assessment section.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>agf__Provide_details_when_dependencies_open</fullName>
        <active>true</active>
        <errorConditionFormula>IF(ISBLANK( agf__Provide_other_team_dependencies_details__c ), 
    OR(
      AND(ISPICKVAL( agf__Features_Complete_and_DoD_Achieved__c , &quot;No&quot;),
       NOT(ISPICKVAL( agf__Dependencies_on_other_teams_closed__c , &quot;Yes&quot;))
      ),
      ISPICKVAL( agf__Dependencies_on_other_teams_closed__c , &quot;No&quot;)
    ),
    false)</errorConditionFormula>
        <errorDisplayField>agf__Provide_other_team_dependencies_details__c</errorDisplayField>
        <errorMessage>Details must be provided when dependencies on other teams are not closed.</errorMessage>
    </validationRules>
</CustomObject>